--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul class="nav-list v-class-resp">
             <div class="logo"> <img src="Images/logo234.png" alt="logo"></div>
             <li><a href="#home">Home</a></li>
-            <li><a href="/Html/Curicullum.html">Courses</a></li>
+            <li><a href="Curicullum.html">Courses</a></li>
             <li><a href="tel:9971475942"><img src="/Images/phone.png" alt="">Phone</a></li>
             <li><a href="https://wa.me/919971475942?text=I want a demo class"><img src="/Images/whatsapp.png"
                         alt="">Whatsapp</a></li>
