--- a/Curicullum.html
+++ b/Curicullum.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coding class - Online</title>
-  <link rel="stylesheet" href="/Css/Curicullum.css">
+  <link rel="stylesheet" href="Css/Curicullum.css">
   <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,100' rel='stylesheet' type='text/css'> -->
 
 </head>
